# voting-app-kustomized

./: README.md
config/: .gitignore
config/acorn/: Acornfile
config/apps/argocd/: helmfile.yaml  values.yaml.gotmpl
config/apps/main/: votingapp.yaml
config/compose/: docker-compose-nats.yml  docker-compose.yml
config/helm/: Chart.yaml  values.yaml
config/helm/templates/: db-deployment.yaml  db-service.yaml  ingress.yaml  redis-deployment.yaml  result-ui-deployment.yaml  result-ui-service.yaml  (+2 more)
config/seed/: seed-k8s.sh
deploy/: .gitlab-ci.yml  README.md  deploy.sh
deploy/acorn/: app.yaml
deploy/helm/: helmfile.yaml
deploy/seed/: Dockerfile  README.md
result/: .gitlab-ci.yml  Dockerfile  package-lock.json  package.json  server.js
result-ui/: .eslintrc.js  .gitlab-ci.yml  Dockerfile  README.md  angular.json  karma.conf.js  nginx.conf  package-lock.json  package.json  proxy.conf.json  tsconfig.json
result-ui/e2e/: protractor.conf.js
result-ui/src/: index.html  main.ts  styles.css
vote/: .gitlab-ci.yml  Dockerfile  app.py  requirements.txt
vote-ui/: .releaserc.yml  Dockerfile  README.md  index.css  index.html  index.js  nginx.conf
vote-ui/content/: content.css  content.js
worker/: .dockerignore  .gitignore  .gitlab-ci.yml
worker/dotnet/: Dockerfile  Procfile  Program.cs  Worker.csproj  shipa.yaml
worker/go/: Dockerfile  go.mod  go.sum  main.go
worker/java/: Dockerfile  Procfile  pom.xml  shipa.yaml
worker/rust/: Cargo.toml  Dockerfile
worker/rust/src/: app_error.rs  config.rs  db.rs  main.rs  redis_conn.rs  votes.rs
(+51 files in other folders)
