[package]

edition = "2018"
name = "worker-rust"
version = "0.0.1"
authors = ["Thomas CASTELLY <thomas@tcy.io>"]

[dependencies]
tokio = { version = "1.21.2", features = ["full"] }
tokio-postgres = { version = "0.7.7" }
redis = { version = "0.22.1", features = ["tokio-comp"]  }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
